--- a/myappproject/app/src/main/res/values/strings.xml
+++ b/myappproject/app/src/main/res/values/strings.xml
@@ -66,6 +66,6 @@
     <string name="ok">确定</string>
 
     <string name="str_add_friend">加好友</string>
-
+    <string name="comment_str">说点什么吧</string>
 
 </resources>
